adds cloneable interface example